packages/numaaron/numaaron-0.0.10.0.1.tar.gz/numaaron-0.0.10.0.1/numaaron/typing/tests/data/fail/array_pad.pyi
import numaaron as np
import numaaron.typing as npt

AR_i8: npt.NDArray[np.int64]

np.pad(AR_i8, 2, mode="bob")  # E: No overload variant
